--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "random discord crap",
   "main": "inject.js",
   "dependencies": {
+    "@cliqz/adblocker-electron": "^1.23.0",
     "@iarna/toml": "^2.2.5",
+    "cross-fetch": "^3.1.4",
     "wolframalpha-websocket-api": "github:iczero/wolframalpha-websocket-api"
   },
   "devDependencies": {
