--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "random discord crap",
   "main": "inject.js",
   "dependencies": {
-    "@cliqz/adblocker-electron": "^1.23.0",
+    "@cliqz/adblocker-electron": "^1.23.2",
     "@iarna/toml": "^2.2.5",
     "cross-fetch": "^3.1.4",
-    "wolframalpha-websocket-api": "github:iczero/wolframalpha-websocket-api"
+    "ffi-napi": "^4.0.3",
+    "wolframalpha-websocket-api": "github:iczero/wolframalpha-websocket-api",
+    "yargs-parser": "^21.0.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.7",
-    "typescript": "^4.4.4"
+    "@types/node": "^17.0.8",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "build": "tsc -p .",
