--- a/latex/Dockerfile
+++ b/latex/Dockerfile
@@ -1,9 +1,11 @@
 FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND noninteractive
 
+# install necessary packages
 RUN apt update && \
     apt upgrade -y wget perl ghostscript gnupg
 
+# install texlive
 WORKDIR /root/texlive-install
 COPY texlive.profile .
 RUN wget http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz && \
@@ -11,10 +13,14 @@ RUN wget http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz && \
     ./install-tl -profile texlive.profile && \
     rm -rf /root/texlive-install
 
+# install additional packages
 RUN tlmgr update --self && \
     tlmgr install xkeyval simplekv standalone preview microtype varwidth \
-        chemfig etoolbox latexmk && \
+        chemfig etoolbox latexmk setspace pdfpages && \
     tlmgr path add
+
+# pre-cache stuff
+RUN luaotfload-tool -vv --update
 
 VOLUME /data
 WORKDIR /data
