--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@cliqz/adblocker-electron": "^1.23.2",
     "@iarna/toml": "^2.2.5",
     "cross-fetch": "^3.1.4",
+    "debug": "^4.3.3",
     "ffi-napi": "^4.0.3",
     "wolframalpha-websocket-api": "github:iczero/wolframalpha-websocket-api",
     "yargs-parser": "^21.0.0"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "@types/node": "^17.0.8",
     "typescript": "^4.5.4"
   },
